# dnssync-rs

./: .gitignore  Cargo.toml  README.md  config.example.env  dnssync-rs.code-workspace  flake.nix
src/: cli.rs  config.rs  lib.rs  main.rs
src/cloudflare/: backend.rs  config.rs  default.nix  frontend.rs  mod.rs  models.rs
src/common/: comparison.rs  config.rs  error.rs  mod.rs  models.rs
src/headscale/: backend.rs  config.rs  default.nix  frontend.rs  models.rs
src/jsonfile/: backend.rs  config.rs  default.nix  mod.rs  models.rs
src/machinectl/: backend.rs  config.rs  default.nix  frontend.rs  mod.rs  models.rs
src/service/: config.rs  mod.rs  models.rs  service.rs
